support java8 to java11